<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rootViewProfile"
    tools:context=".ui.UserProfileActivity">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/back_icon"
        android:tint="@color/blackNight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:src="@color/purple_200"
        android:text="Tom Preston-Werne"
        android:textColor="@color/blackNight"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.app.tawktest.uc.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@color/blackNight"
                android:layout_marginBottom="@dimen/_10sdp"
                app:civ_border_color="@color/purple_200"
                app:civ_border_width="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/cardViewColor"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/userImg">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:padding="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/followers"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/blackNight"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/txtFollowers"
                            android:text=""
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textColor="@color/blackNight"
                            android:fontFamily="@font/poppins_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/following"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/name"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linearCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/company"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearBlog"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/blog"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtBlog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/public_repos"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtPublicRepos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/public_gists"
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/txtPublicGists"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text=""
                            android:textColor="@color/blackNight"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/editNote"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                android:layout_width="match_parent"
                android:hint="Write Your Note..."
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_11sdp"
                android:gravity="top"
                android:elevation="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/blackNight"
                android:textColorHint="@color/blackNight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/search_back"
                android:layout_height="@dimen/_100sdp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/save"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editNote"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>